--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "express": "^4.15.2"
   },
   "scripts": {
-    "start": "node server.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "start": "node server.js"
   }
 }
